# es_truck_calc

./: .gitignore  pyproject.toml  requirements.txt  vercel.json
api/: calc.py  classes.py  constants.py  index.py
api/templates/: index.html
